test/bad/classes/struct08.px

class A def
    Rat x

A(8f)
